# uwsd

./: .gitignore  CMakeLists.txt  LICENSE  auth.c  client.c  config.c  file.c  http.c  io.c  listen.c  log.c  main.c  script.c  ssl-mbedtls.c  ssl-openssl.c  ssl.c  state.c  teeny-sha1.c  util.c  ws.c
example/: cgi-client.html  cgi-wrapper.uc  cgi.conf  chat-client.html  chat-server.uc  chat.conf  fileserver.conf  handler.uc  paste-client.html  paste-server.uc  paste.conf  proxy.conf
example/certificates/: client1.pfx  example.pem  server.pem
example/cgi-bin/: env.cgi  hello.pl  time.cgi
include/: auth.h  client.h  config.h  file.h  http.h  io.h  listen.h  log.h  mimetypes.h  script.h  ssl.h  state.h  teeny-sha1.h  util.h  ws.h
